--- a/index.css
+++ b/index.css
@@ -36,12 +36,11 @@ body {
         color-stop(0.51, #E4E4E4)
     );
     background-attachment:fixed;
-    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+    font-family: Arial;
     font-size:12px;
     height:100%;
     margin:0px;
     padding:0px;
-    text-transform:uppercase;
     width:100%;
 }
 
@@ -76,7 +75,7 @@ body {
     overflow:visible;
     padding:15px;
     text-align:center;
-	width: 900px;
+	width: 100%;
 	height: 50px;
 }
 
@@ -117,18 +116,35 @@ body {
 }
 
 .question{
-	width: 900px;
-	height: 400px;
-	border: 2px blue solid;
+	width: 100%;
+	height: 200px;
 	padding: 10px;
 	margin: 20px;
 	text-align:left;
+	font-size: 18pt;
+}
+
+    input[type=radio] {
+    border: 0px;
+    width: 30px;
+    height: 30px;
+	display: inline-block;
+}
+
+	button[type=submit] {
+    width: 140px;  
+	height: 70px;
+	font-size: 18pt;
 }
 
 .button {
-	width: 900px;
+	width: 100%;
 	height: 50px;
 	padding: 10px;
 	margin: 10px;
 	text-align: right;
+	position: absolute;
+	right:    0;
+	bottom:   0;
+	font-size: 18pt;
 }
